# fastbase64

./: .gitignore  Cargo.toml  pyproject.toml  readme.md  tox.ini
src/: lib.rs
tests/: conftest.py  test_benchmarks.py
